A typo was fixed

--- a/english.html
+++ b/english.html
@@ -34,7 +34,7 @@
 
 
     <h4>11.06.2014 Prepositions of place</h4>
-    <a href="http://www.englishclub.com/grammar/prepositions-place-at-in-on.htm">Preposition of place: at, in, on</a></br>
+    <a href="http://www.englishclub.com/grammar/prepositions-place-at-in-on.htm">Prepositions of place: at, in, on</a></br>
     Entertainment:</br>
     <a href="http://www.amalgama-lab.com/songs/l/lana_del_rey/young_and_beautiful.html">Young and beautiful</a></br>
     </br>
