Cpp week was added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 		</br>
 		</br>
 
+		<h2>C++ and Qt week</h2>
+		12.06.2014
+		<h3 id="is27">Issue 27: Defining an enum and adding support c++ 2011</h3>
+		<div>
+			Just define</br>
+			enum class SystemState { working, stopped, failed };</br>
+			and append to the .pro file the string</br>
+			CONFIG += c++11
+		</div>
+		</br></br>
+
+
 		<h2>Processing week</h2>
 		31.05.2014
 		<h3 id="is26">Issue 26: Difficulty of software development</h3>
