--- a/index.html
+++ b/index.html
@@ -32,6 +32,35 @@
 		</br>
 
 		<h2>C++ and Qt week</h2>
+		16.06.2014
+
+		<h3 id="is29">Issue 29: Lambdas</h3>
+		<div>
+			
+		</div>
+		</br></br>
+
+		<h3 id="is28">Issue 28: A little about c++ 2011</h3>
+		<div>
+			<a href="http://herbsutter.com/elements-of-modern-c-style/">The original article</a></br>
+			1. Type inference for variables</br>
+			auto i = begin(m);</br>
+			auto const xlimit = config["xlimit"];</br>
+			auto& s = singleton::instance();</br>
+			2. nullptr</br>
+			int* p = nullptr;//not 0</br>
+			3. Range for</br>
+			for( auto d : v ) {</br>
+    			total += d;</br>
+			}</br>
+			4. Nonmember begin and end</br>
+			vector<int> v;</br>
+			int a[100];</br>
+			sort( begin(v), end(v) );</br>
+			sort( begin(a), end(a) );//the same syntax</br>
+		</div>
+		</br></br>
+
 		12.06.2014
 		<h3 id="is27">Issue 27: Defining an enum and adding support c++ 2011</h3>
 		<div>
