--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 		<h3 id="is29">Issue 29: Lambdas</h3>
 		<div>
+			<a href="http://blog.smartbear.com/c-plus-plus/c11-tutorial-lambda-expressions-the-nuts-and-bolts-of-functional-programming/">The original article</a>
 			
 		</div>
 		</br></br>
