--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+	<link rel="icon" 
+      type="image/png" 
+      href="icon.png">
+
     <script src="./javascripts/jquery-2.1.1.min.js"></script>
     <script src="./javascripts/main.js"></script>
   </head>
