'The status civilization' was added

--- a/english.html
+++ b/english.html
@@ -32,6 +32,9 @@
 
 		<h2>English page</h2>
 
+	<h4>21.06.2014 The status civilization</h4>
+    <a href="The status civilization.pdf">Read me!</a></br></br>
+    </br>
 
     <h4>11.06.2014 Prepositions of place</h4>
     <a href="http://www.englishclub.com/grammar/prepositions-place-at-in-on.htm">Prepositions of place: at, in, on</a></br>
