Funny cats was added

--- a/english.html
+++ b/english.html
@@ -32,6 +32,11 @@
 
 		<h2>English page</h2>
 
+    <h4>30.06.2014 The 100 Most Important Cat Pictures Of All Time</h4>
+    <a href="http://www.newslinq.com/cat-picture/">You must see me!</a></br></br>
+    </br>
+
+
 	<h4>21.06.2014 The status civilization</h4>
     <a href="The status civilization.pdf">Read me!</a></br></br>
     </br>
