How to install nodejs and npm

--- a/index.html
+++ b/index.html
@@ -36,6 +36,47 @@
 		</br>
 		</br>
 
+
+		02.07.2014
+
+		<h3 id="is32">Issue 32: Installing nodejs and npm on Ubuntu 14.04</h3>
+		<div>
+			<a href="http://tecadmin.net/install-latest-nodejs-npm-on-ubuntu/#">The original article</a></br></br>
+
+			Step 1 – Add PPA in System</br></br>
+
+			First add node.js ppa in our system using following set of command. We also need to install python-software-properties package if not installed already.</br></br>
+
+			$ sudo apt-get install python-software-properties</br>
+			$ sudo apt-add-repository ppa:chris-lea/node.js</br>
+			$ sudo apt-get update</br></br>
+
+			Step 2 – Install Node.js and NPM</br></br>
+
+			After adding required PPA file, lets install nodejs package. NPM will also be installed with node.js. This command will also install many other dependent packages on your system.</br></br>
+
+			$ sudo apt-get install nodejs</br></br>
+			
+			Step 3 – Check Node.js and NPM Version</br></br>
+
+			After installing node.js verify and check the installed version. You can find more details about current version on node.js official website.</br></br>
+
+			$ node -v </br>
+
+			v0.10.28</br>
+			Also check the version of npm.</br>
+
+			$ npm -v </br>
+
+			1.4.9
+
+		</div>
+		</br></br>
+
+
+
+
+
 		<h2>C++ and Qt week</h2>
 		25.06.2014
 
