NoSQL was added

--- a/index.html
+++ b/index.html
@@ -37,8 +37,17 @@
 		</br>
 
 
-		02.07.2014
+		
 
+
+		07.07.2014
+		<h3 id="is33">Issue 33: What NoSQL solution should use?</h3>
+		<div>
+			<a href="http://kkovacs.eu/cassandra-vs-mongodb-vs-couchdb-vs-redis">Cassandra vs mongodb vs couchdb vs redis</a>
+		</div>
+		</br></br>
+
+		02.07.2014
 		<h3 id="is32">Issue 32: Installing nodejs and npm on Ubuntu 14.04</h3>
 		<div>
 			<a href="http://tecadmin.net/install-latest-nodejs-npm-on-ubuntu/#">The original article</a></br></br>
