--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		<h3 id="is33">Issue 33: What NoSQL solution should use?</h3>
 		<div>
 			<a href="http://kkovacs.eu/cassandra-vs-mongodb-vs-couchdb-vs-redis">Cassandra vs mongodb vs couchdb vs redis</a>
+			</br>
+			<a href="http://en.wikipedia.org/wiki/Bitmap_index">Bitmap index</a>
 		</div>
 		</br></br>
 
