Can split lines

--- a/trainer.html
+++ b/trainer.html
@@ -25,7 +25,7 @@
 
 	function setNewWord(){
 		var index = Math.floor(Math.random() * words.length - 1);
-		$('#divWord').text("Hello" + words[index]);
+		$('#divWord').text(words[index].foreign);
 	}
 </script>
 <body>
