Can split lines

--- a/trainer.html
+++ b/trainer.html
@@ -33,8 +33,9 @@
 	client.send();
 </script>
 <body>
-<Button id="newButton" onclick="setNewWord()">Get new word</Button>
-<div id="divWord" onclick="setTranslation()"/>
+<Button id="newButton" onclick="setNewWord()">know word</Button>
+<Button id="dontKnowButton" onclick="setTranslation()">don't know word</Button>
+<div id="divWord"/>
 <div id="divTranslate"/>
 </body>
 </html>
