--- a/trainer.html
+++ b/trainer.html
@@ -14,7 +14,7 @@
 		$('#divWord').text(currentWord.foreign + " " + currentWord.pronunciation);
 	}
 	function setTranslation(){
-		$('#divWord').text("test");//currentWord.motherTongue);
+		$('#divWord').text(currentWord.motherTongue);
 	}
 	var client = new XMLHttpRequest();
 	client.open('GET', '/dict.txt');
