--- a/trainer.html
+++ b/trainer.html
@@ -34,6 +34,7 @@
 	client.send();
 </script>
 <body>
+<h3>My personal English trainer</h3>
 <Button id="newButton" onclick="setNewWord()">know word</Button>
 <Button id="dontKnowButton" onclick="setTranslation()">don't know word</Button>
 <div id="divWord"/>
