Font size of text was changed

--- a/trainer.html
+++ b/trainer.html
@@ -7,8 +7,8 @@
 <style>
 	.starter-template {
   padding: 40px 15px;
-  text-align: center;
-}
+  text-align: center
+;}
 </style>
 <script src="./javascripts/jquery-2.1.1.min.js"></script>
 <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -49,9 +49,9 @@
         <h3>My personal English trainer</h3>
 		<Button id="newButton" class="btn btn-lg btn-success" onclick="setNewWord()">know word</Button>
 		<Button id="dontKnowButton" class="btn btn-lg btn-warning" onclick="setTranslation()">don't know word</Button>
-		<div id="divWord"/>
+		<div style="padding: 10px;font-size: 18pt" id="divWord"/>
       </div>
 
-    </div><!-- /.container -->
+    </div>
 </body>
 </html>
