--- a/trainer.html
+++ b/trainer.html
@@ -19,10 +19,16 @@
 		var index = Math.floor(Math.random() * words.length - 1);
 		if (index < 0){ return; }
 		currentWord = words[index];
-		$('#divWord').text(currentWord.foreign + " " + currentWord.pronunciation);
+		$('#divWord').text(currentWord.foreign);
 	}
-	function setTranslation(){
-		$('#divWord').text(currentWord.motherTongue);
+	function switchText(){
+		var text = $('#divWord').text();
+		if (currentWord.foreign == text){
+			$('#divWord').text(currentWord.motherTongue);
+		}
+		else {	
+			$('#divWord').text(currentWord.foreign);
+		}
 	}
 	var client = new XMLHttpRequest();
 	client.open('GET', '/dict.txt');
@@ -32,8 +38,7 @@
 		.map(function(el){
 			var word = el.split('\t');
 			return {
-				foreign: word[0],
-				pronunciation: word[1],
+				foreign: word[0] + " " + word[1],
 				motherTongue: word[2]
 			};
 		}); 
@@ -48,7 +53,7 @@
       <div class="starter-template">
         <h3>My personal English trainer</h3>
 		<Button id="newButton" class="btn btn-lg btn-success" onclick="setNewWord()">know word</Button>
-		<Button id="dontKnowButton" class="btn btn-lg btn-warning" onclick="setTranslation()">don't know word</Button>
+		<Button id="dontKnowButton" class="btn btn-lg btn-warning" onclick="switchText()">don't know word</Button>
 		<div style="padding: 10px;font-size: 18pt" id="divWord"/>
       </div>
 
