English was improved:)

--- a/english.html
+++ b/english.html
@@ -32,6 +32,16 @@
 
 		<h2>English page</h2>
 
+    <h4>16.07.2014 Conditional sentences</h4>
+    <a href="http://www.ego4u.com/en/cram-up/grammar/conditional-sentences">Conditional sentences</a></br>
+    </br>
+
+
+    <h4>15.07.2014 At a hotel</h4>
+    <a href="http://english-da.ru/dialogi/hotel">At a hotel</a></br>
+    <a href="http://www.vocabulary.cl/Lists/Hotel-Dialogues.htm">Hotel dialogues</a></br>
+    <a href="http://www.dinternal.com.ua/english-for-tourist/hotel/hotel-check-in/">Hotel check-in</a></br>
+    </br>
 
     <h4>06.07.2014 Present tenses</h4>
     <a href="http://usefulenglish.ru/grammar/the-key-to-the-present-tenses">The first article</a></br>
