--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 		</br>
 
 
+		17.07.2014
+		<h3 id="is33">Issue 34: Scala maven configuration</h3>
+		<div>
+			<a href="scala_maven_config.txt">Can see here</a>
+		</div>
+		</br></br>
 		
 
 
