--- a/english.html
+++ b/english.html
@@ -8,6 +8,7 @@
     <script src="./javascripts/jquery-2.1.1.min.js"></script>
   </head>
 <script src="./javascripts/jquery-2.1.1.min.js"></script>
+<script src="./javascripts/menu.js"></script>
 <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <style>
   .starter-template {
@@ -20,28 +21,12 @@
   	min-width: 350px; margin: 1px;
   }
 </style>
+<script>
+	$(document).ready(function(){
+		createMenu("english.html");
+	});
+</script>
 <body>
-
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand">abtv's blog</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Technical blog</a></li>
-            <li><a href="#english.html">English blog</a></li>
-            <li><a href="trainer.html">My personal English trainer</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
 
 <div class="container">
       <div class="starter-template">
