--- a/index2.html
+++ b/index2.html
@@ -4,27 +4,36 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script src="./javascripts/jquery-2.1.1.min.js"></script>
     <script src="./javascripts/main.js"></script>
   </head>
-
+  <style>
+  .starter-template {
+  	padding-top: 40px;
+  	padding-bottom: 40px;
+  padding-left: 120px;
+  max-width: 75%;
+  text-align: justify;}
+  .linkbutton{
+  	min-width: 350px; margin: 1px;
+  }
+</style>
+<script src="./javascripts/menu.js"></script>
+<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+	$(document).ready(function(){
+		createMenu("index.html");
+	});
+</script>
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <h1 id="project_title"/>
-          <h2 id="project_tagline"/>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-	    <a href="index.html">&lt;&lt; Go to processing week</a>
+    <div class="container">
+      <div class="starter-template">
+      <h2>Technical blog</h2>
+        </br>
+	    <a class="btn btn-primary" href="index.html">Go to processing week</a>
 	    &nbsp;&nbsp;&nbsp;
-	    <a href="index1.html">Go to Mongo & Git week &gt;&gt;</a>
+	    <a class="btn btn-primary" href="index1.html">Go to Mongo & Git week</a>
 		</br>
 		</br>
 		</br>
@@ -190,7 +199,7 @@
 		  	&nbsp;&nbsp;override def toString() = url</br>
 			}
 		</div>
-	  </section>
+	  </div>
 	</div>
   </body>
 </html>
