Cache Extreme configuration was added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
 		</br>
 		</br>
 
+		17.07.2014
+		<h3 id="is35">Issue 35: Configuring Cache Extreme (for java) on Mac OSX</h3>
+		<div>
+			sudo vim /etc/paths
+			append line /Applications/Cache/bin
+		</div>
+		</br></br>
+
 
 		17.07.2014
-		<h3 id="is33">Issue 34: Scala maven configuration</h3>
+		<h3 id="is34">Issue 34: Scala maven configuration</h3>
 		<div>
 			<a href="scala_maven_config.txt">Can see here</a>
 		</div>
