--- a/english.html
+++ b/english.html
@@ -33,6 +33,10 @@
         <h2>English blog</h2>
         </br>
 
+        <h4>05.08.2014 English tenses</h4>
+        <img src="Tenses.jpg"/>
+        </br>        
+
         <h4>16.07.2014 Conditional sentences</h4>
         <a type="button" class="btn btn-info" href="http://www.ego4u.com/en/cram-up/grammar/conditional-sentences" class="btn btn-default btn-lg" role="button">Conditional sentences</a></br>
         </br>           
