Excercises were added

--- a/english.html
+++ b/english.html
@@ -33,6 +33,12 @@
         <h2>English blog</h2>
         </br>
 
+        <h4>09.08.2014 English tenses excercises</h4>
+        <a type="button" class="btn btn-info" href="http://www.montsemorales.com/gramatica/AlltenseAfSw-2.htm" class="btn btn-default btn-lg" role="button">Simple and continuous tenses 1</a></br>
+        <a type="button" class="btn btn-info" href="http://www.montsemorales.com/gramatica/AlltenseSw2all0.htm" class="btn btn-default btn-lg" role="button">Simple and continuous tenses 2</a></br>
+        <a type="button" class="btn btn-info" href="http://www.agendaweb.org/verbs/mixed_tenses-exercises.html" class="btn btn-default btn-lg" role="button">Mixed tenses</a></br>
+        </br>    
+
         <h4>05.08.2014 English tenses</h4>
         <img src="Tenses.jpg"/>
         </br>        
