--- a/english.html
+++ b/english.html
@@ -33,6 +33,12 @@
         <h2>English blog</h2>
         </br>
 
+
+        <h4>14.08.2014 Passive voice</h4>
+        <a type="button" class="btn btn-info" href="http://azenglish.ru/tablitsa-passive-voice/" class="btn btn-default btn-lg" role="button">Passive voice, the first article</a></br>
+        <a type="button" class="btn btn-info" href="http://www.ego4u.com/en/cram-up/grammar/passive" class="btn btn-default btn-lg" role="button">Passive voice, the second article</a></br>
+        </br>  
+
         <h4>11.08.2014 Asking directions</h4>
         <a type="button" class="btn btn-info" href="http://www.speakenglish.co.uk/phrases/asking_and_giving_directions?lang=ru" class="btn btn-default btn-lg" role="button">Asking directions</a></br>
         <a type="button" class="btn btn-info" href="http://www.speakenglish.co.uk/vocab/around_town?lang=ru" class="btn btn-default btn-lg" role="button">Vocabulary</a></br>
