--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
 		</br>
 		</br>
 
+		15.08.2014
+
+		<h3 id="is37">Issue 37: How to run jar-file</h3>
+		<div>
+			run in command line: java -jar path_to_jar</br>
+			It's possible to create bat-file on Windows
+		</div>
+		</br></br>
+
+		<h3 id="is36">Issue 36: How to create jar-file</h3>
+		<div>
+			Open "Project structure", then "Artifacts", then select add jar 
+			"From modules with dependencies..." and select main class.
+			After artifact creation select "Build on make".
+		</div>
+		</br></br>
+
 		04.08.2014
 		<h3 id="is35">Issue 35: Configuring Cache Extreme (for java) on Mac OSX</h3>
 		<div>
