--- a/index.html
+++ b/index.html
@@ -39,6 +39,28 @@
 		</br>
 		</br>
 
+		19.08.2014
+
+		<h3 id="is37">Issue 38: Ubuntu pack</h3>
+		<div>
+			//Open JDK</br>
+			sudo apt-get install openjdk-7-jdk</br>
+			java -version</br></br>
+			//Htop</br>
+			sudo apt-get install htop</br></br>
+			//Mongodb</br>
+			sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10</br>
+			echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' | sudo tee /etc/apt/sources.list.d/mongodb.list</br>
+			sudo apt-get update</br>
+			sudo apt-get install mongodb-org</br>
+			//and controls:</br>
+			sudo service mongod start</br>
+			sudo service mongod stop</br>
+			</br>
+
+		</div>
+		</br></br>
+
 		15.08.2014
 
 		<h3 id="is37">Issue 37: How to run jar-file</h3>
