More for Ubuntu pacj

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<h3 id="is37">Issue 38: Ubuntu pack</h3>
 		<div>
 			//Open JDK</br>
+			sudo apt-get update</br>
 			sudo apt-get install openjdk-7-jdk</br>
 			java -version</br></br>
 			//Htop</br>
@@ -53,6 +54,7 @@
 			echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' | sudo tee /etc/apt/sources.list.d/mongodb.list</br>
 			sudo apt-get update</br>
 			sudo apt-get install mongodb-org</br>
+			Now you can type 'mongo' in command line</br>
 			//and controls:</br>
 			sudo service mongod start</br>
 			sudo service mongod stop</br>
