American English vs British English

--- a/english.html
+++ b/english.html
@@ -34,6 +34,11 @@
         </br>
 
 
+        <h4>20.08.2014 American English vs British English</h4>
+        <a type="button" class="btn btn-info" href="http://www.diffen.com/difference/American_English_vs_British_English" class="btn btn-default btn-lg" role="button">The first article</a></br>
+        <a type="button" class="btn btn-info" href="http://www.studynow.ru/other/britishamerican" class="btn btn-default btn-lg" role="button">The second one</a></br>
+        </br>  
+
         <h4>14.08.2014 Passive voice</h4>
         <a type="button" class="btn btn-info" href="http://azenglish.ru/tablitsa-passive-voice/" class="btn btn-default btn-lg" role="button">Passive voice, the first article</a></br>
         <a type="button" class="btn btn-info" href="http://www.ego4u.com/en/cram-up/grammar/passive" class="btn btn-default btn-lg" role="button">Passive voice, the second article</a></br>
